docs: document the new fields

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ MODE                 = PATH # or "PROXY"
 ########################
 
 # The wait time after which requests are getting rejected. 
-# The time is in seconds
+# The time is in seconds. Don't add the unit
 # Default: 10
 TIMEOUT              = 10 # seconds
 
@@ -33,3 +33,13 @@ PRIORITY_QUEUE_SIZE  = 10 # percent
 # The prometheus endpoint is http://cosmic-radiance/metrics, if enabled. 
 # Default: OFF
 PROMETHEUS           = OFF # or "ON"
+
+# The interval in which the rate limiter updates its internal state and processes requests.
+# The polling interval is in milliseconds. Don't add the unit
+# Default: 10
+POLLING_INTERVAL = 10 # milliseconds
+
+# The window size in milliseconds that gets added on top of Riot Games' windows in order to account for latency.
+# The additional window size is in milliseconds. Don't add the unit
+# Default: 125
+ADDITIONAL_WINDOW_SIZE = 125 # milliseconds
