fix: add new env variables to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,5 @@ services:
       - TIMEOUT=${TIMEOUT:-}
       - PRIORITY_QUEUE_SIZE=${PRIORITY_QUEUE_SIZE:-}
       - PROMETHEUS=${PROMETHEUS:-}
+      - POLLING_INTERVAL=${POLLING_INTERVAL:-}
+      - ADDITIONAL_WINDOW_SIZE=${ADDITIONAL_WINDOW_SIZE:-}
